WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132419
REGRESSION (
r168046
): [New Multicolumn] LeftToRight-rl.html (and all the other reversed/block-axis pagination tests) fails
https://bugs.webkit.org/show_bug.cgi?id=132419
Summary
REGRESSION (r168046): [New Multicolumn] LeftToRight-rl.html (and all the othe...
Dave Hyatt
Reported
2014-04-30 21:28:40 PDT
Looks like reverse pagination fails. This also is covered by the WebKit2 Test API stuff.
Attachments
Patch
(196.11 KB, patch)
2014-04-30 23:41 PDT
,
Dave Hyatt
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-04-30 23:41:28 PDT
Created
attachment 230565
[details]
Patch
Dave Hyatt
Comment 2
2014-04-30 23:45:51 PDT
Fixed in
r168088
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug