REGRESSION (r168046): [New Multicolumn] LeftToRight-rl.html (and all the other reversed/block-axis pagination tests) fail https://bugs.webkit.org/show_bug.cgi?id=132419

Reviewed by Andreas Kling.


Source/WebCore:
* rendering/RenderMultiColumnSet.cpp:
(WebCore::RenderMultiColumnSet::initialBlockOffsetForPainting):
Don't flip here. The old code needed to do that, but the new code doesn't.

LayoutTests:
* platform/mac/fast/multicol/pagination/LeftToRight-rl-expected.png:
* platform/mac/fast/multicol/pagination/TopToBottom-bt-expected.png:



Canonical link: https://commits.webkit.org/150452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168088 268f45cc-cd09-0410-ab3c-d52691b4dbfc